<resources>
    <string name="header_main">Catalogue</string>
    <string name="header_detail">Detail</string>
    <string name="lorem">Lorem Ipsum</string>
    <string name="label_description">Description</string>
    <string name="label_user_score">User Score</string>
    <string name="label_runtime">Runtime</string>
    <string name="img_description_poster">Movie Poster</string>
    <string name="tab_text_1">Movie</string>
    <string name="tab_text_2">Tv Show</string>
    <string name="change_language_settings">Change Language Setting</string>
    <string name="error_fetch">Oops, failed to retrieve data from server</string>
    <string name="error_no_transalation">Translation not found</string>
    <string name="error_no_runtime">Unknown</string>
    <string name="error_parse">Error parsing data from server</string>
    <string name="nav_catalog">Catalogue</string>
    <string name="nav_favorite">Favorite</string>
    <string name="header_favorite">My Favorite</string>
    <string name="menu_favorite">favorite</string>
    <string name="success_add_favorite">Added to my favorite</string>
    <string name="empty_favorite_list">Favorite list is empty</string>
    <string name="search">Search</string>
    <string name="search_movie_hint">Search movie...</string>
    <string name="search_tv_show_hint">Search tv show...</string>
    <string name="search_not_found">Search not found</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_text">Favorite Movie</string>
    <string name="empty_text">no data</string>
    <string name="app_name">Favorite Movie</string>
    <string name="update_widget">Update Widget</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="title_release_reminder">Release Reminder</string>
    <string name="summary_release_reminder">Reminder showing the movie that released today</string>
    <string name="title_daily_reminder">Daily Reminder</string>
    <string name="summary_daily_reminder">Reminder for return to app</string>
    <string name="header_setting">Reminder Settings</string>
    <string name="released_today">has been release today!</string>
    <string name="missing_you">missing you!</string>
</resources>
